<resources>
    <string name="app_name">Pioupiou</string>

    <string name="post">Post</string>
    <string name="page">Page</string>

    <string name="blog_not_found">An error occurred when accessing this blog</string>
    <string name="file_not_found">Couldn\'t find the media file for upload. Was it deleted or moved?</string>

    <!-- Strings related to login -->

    <string name="login_title">Pioupiou</string>
    <string name="login_help_url">What\'s your site address (also called site URL)? It should be something like:\n  - ponyexpress.com\n  - ponyexpress.wordpress.com\n  - http://www.ponyexpre.ss</string>
    <string name="login_help_username_and_password">Enter your username (or email address) and password</string>
    <string name="prompt_url">Site address (URL)</string>
    <string name="prompt_email">Username or email</string>
    <string name="prompt_password">Password</string>
    <string name="action_next">Next</string>
    <string name="action_login">Log in</string>
    <string name="error_invalid_url">This site address (URL) is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to post list -->
    <string name="text_separator" translatable="false">\u00A0–\u00A0</string>
    <string name="action_add">Create new micro post</string>

    <!-- New post -->
    <string name="prompt_new_post">What\'s on your mind?</string>

    <string name="error_media_upload">An error occurred while uploading media</string>
    <string name="error_media_upload_connection">A connection error occurred while uploading media</string>
    <string name="file_error_create">Couldn\'t create temp file for media upload. Make sure there is enough free space on your device.</string>
    <string name="error_upload">An error occurred while uploading the post</string>

</resources>
