<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/login_help_url" />

    <org.wordpress.persistentedittext.PersistentEditText
        android:id="@+id/url"
        style="@style/WordPress.NuxEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:hint="@string/prompt_url"
        android:imeActionId="@+id/checkUrl"
        android:imeOptions="actionGo"
        android:inputType="textUri"
        android:maxLines="1"
        app:persistenceEnabled="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/action_next"
        android:textStyle="bold" />

</LinearLayout>
